--- a/Main/SEToolbox/SEToolbox/Views/WindowImportImage.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowImportImage.xaml
@@ -3,11 +3,18 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:commands="clr-namespace:SEToolbox.Services"
-        ResizeMode="NoResize" SizeToContent="Height" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" WindowStyle="ThreeDBorderWindow"
-        Title="Import Image" Height="300" Width="500"
+        xmlns:converters="clr-namespace:SEToolbox.Converters"
+        xmlns:interop="clr-namespace:SEToolbox.Interop"
+        ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" WindowStyle="ThreeDBorderWindow"
+        Title="Import Image" Height="380" Width="550"
         commands:DialogService.IsRegisteredView="True"
         commands:DialogCloser.DialogResult="{Binding CloseResult}"
         FocusManager.FocusedElement="{Binding ElementName=uxWorldSelectionBox}">
+    <Window.Resources>
+        <converters:NullImageConverter x:Key="NullImageConverter"/>
+        <converters:ResouceToImageConverter x:Key="ResouceToImageConverter"/>
+        <converters:EnumToResouceConverter x:Key="EnumToResouceConverter"/>
+    </Window.Resources>
     <Window.Background>
         <LinearGradientBrush>
             <GradientStop Color="#FF2B2077" Offset="4"/>
@@ -16,8 +23,10 @@
     </Window.Background>
     <Grid>
         <StackPanel Margin="8">
-            <Grid Margin="0,0,0,8" Height="220">
+            <Grid Margin="0,0,0,8" Height="270">
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -33,29 +42,113 @@
                 
                 <Label Content="Image:" />
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
-                    <TextBox Width="180" />
-                    <Button ToolTip="Browse for Image" />
+                    <TextBox Width="180" Text="{Binding Filename}" VerticalAlignment="Center"/>
+                    <Button ToolTip="Browse for Image" Command="{Binding BrowseImageCommand}" VerticalAlignment="Center">
+                        <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=folder}" />
+                    </Button>
                 </StackPanel>
-                <StackPanel Grid.Row="1">
-                    <Label Content="Dimentions:" />
-                    <!-- original ... new -->
+                <Label Content="Type:" Grid.Row="1" />
+                <ComboBox Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Width="200" ItemsSource="{Binding Source={StaticResource ClassTypeEnum}}" SelectedValue="{Binding ClassType}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=., Converter={StaticResource EnumToResouceConverter}}" />
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                <Label Content="Armor:" Grid.Row="2" />
+                <ComboBox Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Width="200" ItemsSource="{Binding Source={StaticResource ArmorTypeEnum}}" SelectedValue="{Binding ArmorType}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Path=., Converter={StaticResource EnumToResouceConverter}}" />
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                <StackPanel Grid.Row="3" Grid.ColumnSpan="2" Orientation="Horizontal">
+                    <GroupBox Header="Original Size" MinWidth="120">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <Label Content="Width:" Margin="0,0,0,0" />
+                            <TextBlock Grid.Column="1" VerticalAlignment="Center" Text="{Binding Path=OriginalImageSize.Width}" />
+                            <Label Content="Height:" Margin="0,0,0,0" Grid.Row="1" />
+                            <TextBlock Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Text="{Binding Path=OriginalImageSize.Height}" />
+                        </Grid>
+                    </GroupBox>
+                    <Button Content=">" VerticalAlignment="Center" ToolTip="Set size to back to Original size" Command="{Binding SetToOriginalSizeCommand}" />
+                    <GroupBox Header="New Size" MinWidth="120" Margin="8,0,0,0">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <Label Content="Width:" Margin="0,0,0,0" VerticalAlignment="Center"/>
+                            <TextBox Grid.Column="1" MinWidth="60" VerticalAlignment="Center" Text="{Binding Path=NewImageSize.Width, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <Label Content="Height:" Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Center" />
+                            <TextBox Grid.Column="1" Grid.Row="1" MinWidth="60" VerticalAlignment="Center" Text="{Binding Path=NewImageSize.Height, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        </Grid>
+                    </GroupBox>
                 </StackPanel>
-                <StackPanel Grid.Row="2">
-                    <Label Content="Position:" />
-                    <!-- X,Y,Z -->
+                <StackPanel Grid.Row="4" Grid.ColumnSpan="2" Orientation="Horizontal">
+                    <GroupBox Header="Position" MinWidth="120">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <Label Content="X:" Margin="0,0,4,0" VerticalAlignment="Center" />
+                            <TextBox Grid.Column="1" MinWidth="80" Width="100" VerticalAlignment="Center" Text="{Binding Path=Position.X, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <Label Content="Y:" Margin="0,0,4,0" Grid.Row="1" VerticalAlignment="Center" />
+                            <TextBox Grid.Column="1" Grid.Row="1" MinWidth="80" Width="100" VerticalAlignment="Center" Text="{Binding Path=Position.Y, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <Label Content="X:" Margin="0,0,4,0" Grid.Row="2"  VerticalAlignment="Center"/>
+                            <TextBox Grid.Column="1" Grid.Row="2" MinWidth="80" Width="100" VerticalAlignment="Center" Text="{Binding Path=Position.Z, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                        </Grid>
+                    </GroupBox>
+                    <GroupBox Header="Orientation" MinWidth="120" Margin="8,0,0,0">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <RadioButton IsChecked="True" Content="Facing Character" />
+                            <!--<Label Content="X:" Margin="0,0,4,0" />
+                            <TextBox Grid.Column="1" MinWidth="80" Text="1234" />
+                            <Label Content="Y:" Margin="0,0,4,0" Grid.Row="1" />
+                            <TextBox Grid.Column="1" Grid.Row="1" MinWidth="80" Text="1234" />
+                            <Label Content="X:" Margin="0,0,4,0" Grid.Row="2" />
+                            <TextBox Grid.Column="1" Grid.Row="2" MinWidth="80" Text="1234" />
+                            <Label Content="W:" Margin="0,0,4,0" Grid.Row="3" />
+                            <TextBox Grid.Column="1" Grid.Row="3" MinWidth="80" Text="1234" />-->
+                        </Grid>
+                    </GroupBox>
                 </StackPanel>
-                <StackPanel Grid.Row="4">
-                    <Label Content="Orientation:" />
-                    <!-- X,Y,Z,W -->
-                </StackPanel>
-
                 <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="2" Grid.RowSpan="8" HorizontalAlignment="Right">
                     <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" VerticalAlignment="Top">
-                        <Image Width="100" Height="100" Stretch="Uniform" ToolTip="Original Image" />
+                        <Image Width="200" Height="120" Stretch="None" ToolTip="Original Image" Source="{Binding Path=Filename, Converter={StaticResource NullImageConverter}}" />
                     </Border>
                     <TextBlock Text="\/" VerticalAlignment="Center" HorizontalAlignment="Center" />
                     <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" VerticalAlignment="Top">
-                        <Image Width="100" Height="100" Stretch="Uniform" ToolTip="Preview" />
+                        <Image Width="200" Height="120" Stretch="None" ToolTip="Preview" Source="{Binding NewImage}" />
                     </Border>
                 </StackPanel>
             </Grid>
